chore: implement styles

--- a/src/presentation/components/button/styles.scss
+++ b/src/presentation/components/button/styles.scss
@@ -1,19 +1,24 @@
 .button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-  
-    &:disabled {
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+
+  &:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    &:hover {
       background-color: #ccc;
-      cursor: not-allowed;
     }
-  
+  }
+
+  &:enabled {
+    background-color: #007bff;
     &:hover {
       background-color: #0056b3;
     }
   }
+}
