feat: move app style colors to a single file

--- a/src/presentation/components/anchor/styles.scss
+++ b/src/presentation/components/anchor/styles.scss
@@ -1,8 +1,10 @@
+@import '../../styles/index.scss';
+
 .anchor {
   display: inline-block;
   text-decoration: underline;
   text-align: center;
-  color: #3498db;
+  color: $MediumDarkColor;
   padding: 5px;
   margin: 10px;
   font-weight: bold;
