--- a/src/presentation/components/button/styles.scss
+++ b/src/presentation/components/button/styles.scss
@@ -1,5 +1,7 @@
+@import '../../styles/index.scss';
+
 .button {
-  color: #fff;
+  color: $MediumLightColor;
   border: none;
   border-radius: 4px;
   padding: 10px 20px;
@@ -8,17 +10,16 @@
   transition: background-color 0.3s;
 
   &:disabled {
-    background-color: #ccc;
+    color: $LightColor;
+    background-color:  $MediumLightColor;
     cursor: not-allowed;
-    &:hover {
-      background-color: #ccc;
-    }
   }
 
   &:enabled {
-    background-color: #007bff;
+    color: $LightColor;
+    background-color: $MediumDarkColor;
     &:hover {
-      background-color: #0056b3;
+      background-color: $DarkColor;
     }
   }
 }
