--- a/src/presentation/pages/delete-user-page/styles.scss
+++ b/src/presentation/pages/delete-user-page/styles.scss
@@ -1,8 +1,10 @@
+@import '../../styles/index.scss';
+
 .delete-user-page {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f0f0f0;
+  background-color: $MediumLightColor;
 }
