--- a/src/presentation/pages/login-page/styles.scss
+++ b/src/presentation/pages/login-page/styles.scss
@@ -1,14 +1,16 @@
+@import '../../styles/index.scss';
+
 .login-page {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f0f0f0;
+  background-color: $MediumLightColor;
 }
 
 .form-container {
-  background-color: #fff;
+  background-color: $LightColor;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
