--- a/src/presentation/components/form-title/styles.scss
+++ b/src/presentation/components/form-title/styles.scss
@@ -1,7 +1,9 @@
+@import '../../styles/index.scss';
+
 .form-title {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
-  color: #333;
+  color: $DarkColor;
   text-align: center;
 }
